# logrun

./: CMakeLists.txt  INSTALL.txt  LICENSE  Makefile.canned  README.txt  check_getopt_plus.c  logrun.1  logrun.c  logrun_config.h.canned  logrun_config.h.in
Test/: Test-README.txt
